--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,8 @@
 {
   "name": "fotosgram",
-  "integrations": {},
+  "integrations": {
+    "cordova": {},
+    "capacitor": {}
+  },
   "type": "angular"
 }
